--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
   {%- endif -%}
 
   <!-- STYLESHEETS -->
+  <link rel="import" href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic" async>
+
   <link rel="stylesheet" type="text/css" media="all" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" media="all" href="assets/css/all.min.css">
   <link rel="stylesheet" type="text/css" media="all" href="assets/css/simple-line-icons.css">
