--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -540,7 +540,7 @@ select.portfolio-filter-mobile {
 /*                      CONTACT                              
 /*=================================================================*/
 .contact-info {
-	background-image: url('../images/map.svg');
+	background-image: url('../images/map.webp');
 	background-repeat: no-repeat;
 	background-size: contain;
 	min-height: 200px;
