Add value to progress-bar

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,7 +9,7 @@
 
       <!-- info -->
       <h1 class="mb-2 mt-0">{{ site.author | escape }}</h1>
-      <span>I'm a <span class="text-rotating">{{ site.rotation_text | escape }}</span>.</span>
+      <span>I'm <span class="text-rotating">{{ site.rotation_text | escape }}</span>.</span>
 
       <!-- social icons -->
       <ul class="social-icons light list-inline mb-0 mt-4">
